tests/purs/failing/RowKindTest.out
Error found:
in module [33mRowKindTest[0m
at tests/purs/failing/RowKindTest.purs:9:25 - 9:28 (line 9, column 25 - line 9, column 28)

  Could not match kind
  [33m             [0m
  [33m  ( a :: Type[0m
  [33m  , b :: Type[0m
  [33m  )          [0m
  [33m             [0m
  with kind
  [33m             [0m
  [33m  ( a :: Int [0m
  [33m  , c :: Type[0m
  [33m  , d :: Type[0m
  [33m  )          [0m
  [33m             [0m

while checking that type [33mFoo[0m
  has kind [33m{ a :: Int [0m
           [33m, c :: Type[0m
           [33m, d :: Type[0m
           [33m}          [0m
while inferring the kind of [33mBar Foo[0m
while inferring the kind of [33mProxy (Bar Foo)[0m
in value declaration [33msomething[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

